--- a/style.css
+++ b/style.css
@@ -1,89 +1,136 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  box-sizing: border-box;
 }
 
-body{
-    /* background: linear-gradient(135deg,#00feba,#5b548a); */
-    background-image: url("https://github.com/xenoz098/weather/blob/main/bluishearth.jpg?raw=true");
-    background-repeat: no-repeat;
-    /* background-attachment: fixed; */
-    background-size: 100% 100%;
-} 
-.card{
-    width: 90%;
-    max-width: 470px;
-    background: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    margin: 100px auto 0;
-    border-radius: 20px;
-    padding: 40px 35px;
-    text-align: center;
+body {
+  background: linear-gradient(#020024, #090979, #00d4ff);
+  align-items: flex-start;
 }
-.search{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
+.total {
+  display: flex;
+  width: 100%;
 }
-.search input{
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    color: #555;
-    padding: 10px 25px;
-    height: 60px;
-    border-radius: 30px;
-    flex: 1;
-    margin-right: 16px;
-    font-size: 18px;
+.card {
+  max-width: auto;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  margin: 100px auto 0;
+  border-radius: 20px;
+  padding: 40px 35px;
+  text-align: center;
+  margin-left: 20px;
+  align-items: flex-start;
+  height: 100%;
 }
-.search button{
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
+.search {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.search button img{
-    width: 16px;
+.search input {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  color: #555;
+  padding: 10px 25px;
+  height: 60px;
+  border-radius: 30px;
+  flex: 1;
+  margin-right: 16px;
+  font-size: 18px;
 }
-.weather-icon{
-    width: 170px;
-    margin-top: 30px;
+.search button {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
 }
-.weather h1{
-    font-size: 60px;
-    font-weight: 500;
+
+.search button img {
+  width: 16px;
 }
-.weather h2{
-    font-size: 60px;
-    font-weight: 400;
-    margin-top: -10px;
+.weather-icon {
+  width: 170px;
+  margin-top: 0px;
 }
-.details{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    margin-top: 50px;
+.weather h1 {
+  font-size: 60px;
+  font-weight: 500;
 }
-.col{
-    display: flex;
-    align-items: center;
-    text-align: left;
+.weather h2 {
+  font-size: 60px;
+  font-weight: 400;
+  margin-top: -10px;
 }
-.col img{
-    width: 40px;
-    margin-right: 10px;
+.details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-top: 50px;
 }
-.humidity, .wind{
-    font-size: 28px;
-    margin-top: -6px;
+.col {
+  display: flex;
+  align-items: center;
+  text-align: left;
+}
+.col img {
+  width: 40px;
+  margin-right: 10px;
+}
+.humidity,
+.wind {
+  font-size: 28px;
+  margin-top: -6px;
+}
+.footer {
+  background: rgba(0, 0, 0, 0);
+  text-align: center;
+  bottom: 0;
+  margin-bottom: 0;
+}
+.datetime {
+  display: flex;
+  align-items: center;
+  text-align: left;
+}
+
+.date {
+  font-size: 28px;
+  margin-top: 26px;
+}
+.description {
+  font-size: 25px;
+  font-weight: 400;
+  margin-top: 20px;
+}
+
+
+.past-days {
+  /* Styling for the container of past day cards */
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-left: 40px;
+}
+.past-day-card {
+  /* Styling for each past day card */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 350px;
+  width: 250px;
+  margin-top: 10px;
+  border-radius: 7px;
+  border: 2px solid black;
+  color: white;
+  padding-top: 10px;
 
 }
